--- a/.settings/com.google.gdt.eclipse.core.prefs
+++ b/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,3 +1,3 @@
-#Thu Feb 18 18:30:34 CET 2010
+#Thu Feb 18 18:36:17 CET 2010
 eclipse.preferences.version=1
-jarsExcludedFromWebInfLib=
+jarsExcludedFromWebInfLib=E\:/wtp20/plugins/com.google.gwt.eclipse.sdkbundle.2.0.2_2.0.2.v201002121411/gwt-2.0.2/gwt-dev.jar|E\:/wtp20/plugins/com.google.gwt.eclipse.sdkbundle.2.0.2_2.0.2.v201002121411/gwt-2.0.2/gwt-user.jar
