--- a/.settings/com.google.gwt.eclipse.core.prefs
+++ b/.settings/com.google.gwt.eclipse.core.prefs
@@ -1,3 +1,4 @@
-#Thu Feb 18 18:31:04 CET 2010
+#Thu Feb 18 18:33:40 CET 2010
 eclipse.preferences.version=1
 entryPointModules=
+filesCopiedToWebInfLib=
