--- a/pom.xml
+++ b/pom.xml
@@ -160,7 +160,8 @@
         <dependency>
             <groupId>com.google.appengine</groupId>
             <artifactId>appengine-local-runtime</artifactId>
-            <version>${gae.version}</version>
+  <version>${gae.version}</version> 
+            <!--             <version>1.3.0</version> -->
             <scope>test</scope>
         </dependency>
     </dependencies>
